Added packet builder, basic packet parser, and tests

--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/zhiquanyeo/ftl-ansible/issues"
   },
-  "homepage": "https://github.com/zhiquanyeo/ftl-ansible#readme"
+  "homepage": "https://github.com/zhiquanyeo/ftl-ansible#readme",
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "chai-bytes": "^0.1.1"
+  },
+  "dependencies": {
+    "winston": "^2.3.1"
+  }
 }
