--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/zhiquanyeo/ftl-ansible#readme",
   "devDependencies": {
     "chai": "^4.0.2",
+    "chai-as-promised": "^7.0.0",
     "chai-bytes": "^0.1.1"
   },
   "dependencies": {
